--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script defer src="face-api.min.js"></script>
-  <script defer src="script.js"></script>
-  <title>Face Recognition</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column
-    }
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./scr/style/style.css" media="screen"/>
+    <title>Face Recognition</title>
+  </head>
+  <body>
+    <header>
+        <h1>Deteccion de rostros by <i>Miguel Ruiz</i></h1>
+        <nav class="menu">
+          <a href="./index.html">Inicio</a>
+          <a href="./scr/imagedetect.html">Deteccion en Imagenes</a>
+          <a href="#">Deteccion en Videos</a>
+        </nav>
+    </header>
 
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-  </style>
-</head>
-<body>
-  <input type="file" id="imageUpload">
-</body>
+    <div class="wrapper">
+      <section>
+        <h2>Detalles aqui</h2>
+        <p>todo el contenido y mas en este espacio si¡?    
+          ¿Qué es Lorem Ipsum?
+            Lorem Ipsum es simplemente el texto de relleno de las imprentas y 
+            archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar 
+            de las industrias desde el año 1500, cuando un impresor (N. del T. 
+            persona que se dedica a la imprenta) desconocido usó una galería de 
+            textos y los mezcló de tal manera que logró hacer un libro de textos 
+            especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como 
+            texto de relleno en documentos electrónicos, quedando esencialmente 
+            igual al original. Fue popularizado en los 60s con la creación de las 
+            hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más 
+            recientemente con software de autoedición, como por ejemplo Aldus 
+            PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur enim non risus porta elementum. Pellentesque laoreet pellentesque malesuada. Aliquam feugiat tellus eget purus aliquam facilisis. In hac habitasse platea dictumst. Etiam lorem purus, tristique id ipsum at, accumsan placerat nunc. Praesent auctor consequat purus, efficitur tristique elit interdum quis. Maecenas tincidunt augue et ante dignissim, a tincidunt urna blandit. Duis bibendum dolor viverra, dignissim sem eu, sagittis elit. Vivamus ornare, nulla vel dignissim fringilla, turpis est porttitor massa, at accumsan nisi leo sed odio.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur enim non risus porta elementum. Pellentesque laoreet pellentesque malesuada. Aliquam feugiat tellus eget purus aliquam facilisis. In hac habitasse platea dictumst. Etiam lorem purus, tristique id ipsum at, accumsan placerat nunc. Praesent auctor consequat purus, efficitur tristique elit interdum quis. Maecenas tincidunt augue et ante dignissim, a tincidunt urna blandit. Duis bibendum dolor viverra, dignissim sem eu, sagittis elit. Vivamus ornare, nulla vel dignissim fringilla, turpis est porttitor massa, at accumsan nisi leo sed odio.</p>
+        <p>Mauris lobortis ac sapien vitae ultricies. Quisque sit amet lectus sapien. Suspendisse nisl libero, varius in ullamcorper nec, tempor id magna. Nunc semper neque id consectetur imperdiet. Proin dictum sapien lacus, non feugiat augue viverra vitae. Mauris placerat gravida sem, sit amet consequat lectus elementum rutrum. Praesent malesuada orci vitae nisi dapibus ultricies sed in ipsum. Vestibulum ut gravida leo. Quisque consequat interdum massa nec luctus. Duis egestas laoreet sapien vel finibus. Nulla sodales facilisis libero in ultrices. Suspendisse potenti. Etiam sed tortor suscipit, lacinia leo at, ullamcorper nulla. Morbi mollis sapien odio, at porttitor tellus sagittis sit amet. Sed ultricies cursus leo eu elementum. Vivamus non mauris convallis mi luctus consectetur.</p>
+      </section>
+    </div>
+
+    <script src="./scr/script/jquery-3.4.1.min.js"></script>
+    <script src="./scr/script/scriptjq.js"></script>
+  </body>
 </html>
