Cuarto commit, integracion de codigo de camara a la pagina principal

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="menu">
           <a href="./index.html">Inicio</a>
           <a href="./scr/imagedetect.html">Deteccion en Imagenes</a>
-          <a href="#">Deteccion en Videos</a>
+          <a href="./scr/cameradetect.html">Deteccion en Videos</a>
         </nav>
     </header>
 
