--- a/scr/imagedetect.html
+++ b/scr/imagedetect.html
@@ -15,7 +15,7 @@
         <nav class="menu">
             <a href="../index.html">Inicio</a>
             <a href="./imagedetect.html">Deteccion en Imagenes</a>
-            <a href="#">Deteccion en Videos</a>
+            <a href="./cameradetect.html">Deteccion en Videos</a>
         </nav>
     </header>
 <!--Codigo de imagen aqui-->
